--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
 ################################################################################
-ARG GO_VERSION=1.22
-FROM --platform=$BUILDPLATFORM golang:${GO_VERSION} AS build
+ARG GO_VERSION=1.22.0
+FROM --platform=$BUILDPLATFORM amd64/golang:${GO_VERSION}-alpine AS build-backend
 WORKDIR /src
+
+#RUN #apk add clang lld #apk add --no-cache libgit2 libgit2-dev git gcc g++ pkgconfig
 
 RUN --mount=type=cache,target=/go/pkg/mod/ \
     --mount=type=bind,source=go.sum,target=go.sum \
@@ -9,13 +11,14 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
     go mod download -x
 
 ARG TARGETARCH
+ARG TARGETOS
 
 RUN --mount=type=cache,target=/go/pkg/mod/ \
     --mount=type=bind,target=. \
-    CGO_ENABLED=1 GOARCH=$TARGETARCH go build -o /bin/server ./cmd/server
-
+     GOARCH=$TARGETARCH  GOOS=$TARGETOS go build  -o /bin/server ./cmd/server
+# \CGO_ENABLED=0 GO111MODULE=on \
 ################################################################################
-FROM alpine:latest AS final
+FROM amd64/alpine:latest AS final
 
 RUN --mount=type=cache,target=/var/cache/apk \
     apk --update add \
@@ -27,11 +30,12 @@ RUN --mount=type=cache,target=/var/cache/apk \
 ARG UID=10001
 USER root
 
-RUN mkdir /bin/messager
-COPY --from=build /bin/server /bin/messager
-COPY config/config.yaml /bin/messager
+RUN mkdir /msg
+COPY --from=build-backend /bin/server /msg
+COPY config/config.yaml /msg
 
-RUN chmod +x /bin/messager/server
 EXPOSE 8888
+RUN chmod a+x /messager/server
 
-ENTRYPOINT [ "/bin/messager/server" ]
+ENTRYPOINT ["/messager/server"]
+#ENTRYPOINT ["top"]
