--- a/sso/Dockerfile
+++ b/sso/Dockerfile
@@ -1,6 +1,6 @@
 ################################################################################
-ARG GO_VERSION=1.22
-FROM --platform=$BUILDPLATFORM golang:${GO_VERSION} AS build
+ARG GO_VERSION=1.22.0
+FROM --platform=$BUILDPLATFORM amd64/golang:${GO_VERSION}-alpine AS build-sso
 WORKDIR /src
 
 RUN --mount=type=cache,target=/go/pkg/mod/ \
@@ -12,10 +12,9 @@ ARG TARGETARCH
 
 RUN --mount=type=cache,target=/go/pkg/mod/ \
     --mount=type=bind,target=. \
-    CGO_ENABLED=0 GOARCH=$TARGETARCH go build -o /bin/server ./cmd/server
-
+    CGO_ENABLED=0 GOARCH=$TARGETARCH GOOS=linux go build -o /bin/server ./cmd/server
 ################################################################################
-FROM alpine:latest AS final
+FROM amd64/alpine:latest AS final
 
 RUN --mount=type=cache,target=/var/cache/apk \
     apk --update add \
@@ -27,11 +26,11 @@ RUN --mount=type=cache,target=/var/cache/apk \
 ARG UID=10001
 USER root
 
-RUN mkdir /bin/sso
-COPY --from=build /bin/server /bin/sso
-COPY config/config.yaml /bin/sso
+RUN mkdir /sso
+COPY --from=build-sso /bin/server /sso
+COPY config/config.yaml /sso
 
-EXPOSE 7777
-RUN chmod +x /bin/sso/server
+EXPOSE 9999
+#RUN chmod a+x /sso/server
 
-ENTRYPOINT [ "/bin/sso/server" ]
+ENTRYPOINT ["/sso/server"]
