--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -11,5 +11,5 @@ db:
   port: "5432"
 broker:
   client_id: "1"
-  servers: "host1:9092,host2:9092"
+  servers: "kafka:9092" # ,host2:9092
   acks: "all"
