--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,8 @@
 services:
   backend:
     environment:
-      - config_path=/messager/config.yaml
-    networks: ["srv"]
+      - config_path=/msg/config.yaml
+#    networks: ["srv"]
     env_file:
       - "auth.env"
     build:
@@ -13,7 +13,7 @@ services:
     platform: linux/amd64
     depends_on:
       kafka:
-        condition: service_started
+        condition: service_healthy
       postgres:
         condition: service_healthy
       zookeeper:
@@ -48,6 +48,7 @@ services:
       - zookeeper
     ports:
       - "29092:29092"
+      - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -55,6 +56,12 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: nc -z localhost 9092 || exit -1
+      start_period: 15s
+      interval: 5s
+      timeout: 10s
+      retries: 10
 
   postgres:
     image: postgres
