--- a/stats/Dockerfile
+++ b/stats/Dockerfile
@@ -1,6 +1,6 @@
 ################################################################################
 ARG GO_VERSION=1.22.0
-FROM --platform=$BUILDPLATFORM amd64/golang:${GO_VERSION}-alpine AS build-backend
+FROM --platform=$BUILDPLATFORM amd64/golang:${GO_VERSION}-alpine AS build-stats
 WORKDIR /src
 
 RUN apk --no-cache update && \
@@ -16,7 +16,7 @@ ARG TARGETOS
 
 RUN --mount=type=cache,target=/go/pkg/mod/ \
     --mount=type=bind,target=. \
-    CGO_ENABLED=1 GOARCH=$TARGETARCH  GOOS=$TARGETOS go build -tags musl -ldflags "-s -w -X main.Version=$GIT_TAG_NAME"  -o /bin/server ./cmd/server
+    CGO_ENABLED=1 GOARCH=$TARGETARCH GOOS=$TARGETOS go build -tags musl -ldflags "-s -w -X main.Version=$GIT_TAG_NAME" -o /bin/server ./cmd/server
 ################################################################################
 FROM amd64/alpine:latest AS final
 
@@ -30,15 +30,13 @@ RUN --mount=type=cache,target=/var/cache/apk \
 ARG UID=10001
 USER root
 
-RUN mkdir /msg
-COPY --from=build-backend /bin/server /msg
-COPY config/config.yaml /msg
+RUN mkdir /stats
+COPY --from=build-stats /bin/server /stats/
+COPY config/config.yaml /stats
 
 RUN apk --no-cache update && \
 apk --no-cache add git gcc libc-dev
 
+EXPOSE 7777
 
-EXPOSE 8888
-RUN chmod a+x /msg/server
-
-ENTRYPOINT ["/msg/server"]
+ENTRYPOINT [ "/stats/server" ]
